PSP/borradores/ae/jwt/MUNDIALREST/src/main/java/org/example/mundialrest/common/errors/ApiError.java
package org.example.mundialrest.common.errors;

public record ApiError (String message) {
}
